# multimodal-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: analyze_image.py
src/multimodal_agent/: __init__.py
src/multimodal_agent/agents/: analyst_agent.py  multimodal_agent.py
src/multimodal_agent/api/: server.py
src/multimodal_agent/core/: fusion.py  processor.py  router.py
src/multimodal_agent/tools/: document.py  vision.py
tests/: test_processor.py
